# grep

./: CMakeLists.txt  LICENSE  README.md  grep_interface_functions.cpp  grep_interface_functions.h  grep_utils.cpp  grep_utils.h  main.cpp  result.h  simple_grep  single_text.txt  tests  tests.cpp  threadmanager.cpp  threadmanager.h
tests/: tests.cpp
tests/test_assets/: single_file.txt
tests/test_assets/test_directory/subdir/: test.txt
